--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   },
   "homepage": "https://github.com/destradax/test-common#readme",
   "devDependencies": {
+    "react": "^16.13.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
-  },
-  "dependencies": {
-    "react": "^16.13.1"
   }
 }
