--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "test-common",
+  "name": "test-neutrino",
   "version": "1.0.0",
-  "description": "test repo for shared stuff",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production",
+    "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src test"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/destradax/test-common.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/destradax/test-common/issues"
+  "peerDependencies": {
+    "prop-types": "^15",
+    "react": "^16",
+    "react-dom": "^16"
   },
-  "homepage": "https://github.com/destradax/test-common#readme",
   "devDependencies": {
+    "@neutrinojs/jest": "^9.3.0",
+    "@neutrinojs/react-components": "^9.3.0",
+    "@neutrinojs/standardjs": "^9.3.0",
+    "eslint": "^7.7.0",
+    "jest": "^26.4.0",
+    "neutrino": "^9.3.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
